--- a/style.css
+++ b/style.css
@@ -3,10 +3,20 @@ margin: 0;
 padding: 0;
 background-color: #83a6aa;
 }
+ 
+.cabecalho-imagem{
+  background-color: #150f68;
+  width: 10%;
+}
+
+.cabecalho-logo{
+  background-color: #150f68;
+  color: aliceblue;
+}
 
 .cabecalho{
+     background-color: #150f68;
      
-        color: black;
          display: flex;
         justify-content: space-between; 
       align-items: center;
@@ -14,24 +24,21 @@ background-color: #83a6aa;
       width: 110%;
     }
 
-.acxotituloo{
+      .itenspalavra-1{
+        color: aliceblue;
+      }
 
-  width: 9%; 
-}
-
-.cabecalho-imagem{
- width: 10%;
-  }
-    
-    .cabecalho-lista-item{
-display: inline-block;
-margin: 0 16px;
-font-size: 20px;
-    }
     .itenspalavra{
+      color: aliceblue;
         display: inline-block;
         margin: 0 16px;
         font-size: 20px;  }
-      
+
+      .lista-foto{
+        margin: 10px;
+        height: 10%;
+        padding-left: 20%;
+      flex: 20%;
+      }
 
 
